adding day2-problem7

--- a/week-02/day-02/07/index.html
+++ b/week-02/day-02/07/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Day 2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="challenge-prompt.js"></script>
 </head>
 <body>
-  <h1>Activity 7</h1>
-  <div id="user-input"></div>
-  <div id="result"></div>
-
-  <script src="challenge-prompt.js"></script>
+    <h1>Activity 7</h1>
+    <div id = "screen"></div>
+    <br>
+    <div id = "result"></div>
 </body>
 </html>
