--- a/week-05/day-02/02/prompt.html
+++ b/week-05/day-02/02/prompt.html
@@ -20,12 +20,16 @@
   function numSourPatch(s, c) {
 
 // ===================== YOUR WORK HERE =====================
-var count = 0;
-for(var i =0;i< s.length;i++){
-  for(var j =0;j<c.length;j++){
-    if(s[i] === c[j]){
-      count++;
-    }
+var obj ={};
+var count =0;
+for(var i =0;i<s.length;i++){
+  if(!obj[s[i]]){
+    obj[s[i]] = true;
+  }
+}
+for(var i=0;i<c.length;i++){
+  if(obj[c[i]]){
+    count++;
   }
 }
 return count;
